# mm-ptx

./: AGENTS.md  AST_PTX.md  CITATION.cff  CMakeLists.txt  LICENSE  PTX_INJECT.md  README.md  STACK_PTX.md  ast_ptx.h  ptx_inject.cuh  ptx_inject.h  ptx_inject_new.h  ptx_inject_types_default.h  stack_ptx.h
bench/: CMakeLists.txt  README.md  cuda_emittter.h  ptx_compile_bench.c  ptx_inject_emitter.h  stack_ptx_descriptions.json
cmake/: mm_ptx_codegen.cmake  mm_ptx_custom_type_plugin.c.in  mm_ptx_process_cuda.cmake  mm_ptx_ptx_inject_types_plugin.cmake
common/: check_result_helper.h  cuda_helper.h  mma_helper.h  nvptx_helper.h  philox.cuh  ptx_inject_helper.h  stack_ptx_default_info.h
docs/: example_generated_template.cu  inject_site_designs.md
examples/: CMakeLists.txt
examples/common/: check_result_helper.h  cuda_helper.h  stack_ptx_default_info.h
examples/ptx_inject/: CMakeLists.txt  README.md
examples/ptx_inject/00_simple/: CMakeLists.txt  kernel.cu  main.c
examples/ptx_inject/01_cmake/: CMakeLists.txt  kernel.cu  main.c
examples/ptx_inject/01_gemm/: CMakeLists.txt  main.c
examples/ptx_inject/02_custom_types/: CMakeLists.txt  kernel.cu  main.c
examples/ptx_inject/02_gemm/: CMakeLists.txt  main.c
examples/ptx_inject/03_custom_types_cli/: CMakeLists.txt  custom_types.json  custom_types_plugin.c  kernel.cu  main.c
examples/ptx_inject_new/: CMakeLists.txt
examples/ptx_inject_new/00_simple/: CMakeLists.txt  kernel.cu  main.c
examples/stack_ptx/: CMakeLists.txt  README.md
examples/stack_ptx/00_simple/: CMakeLists.txt  main.c
examples/stack_ptx/01_routines/: CMakeLists.txt  main.c
examples/stack_ptx/02_routine_libraries/: CMakeLists.txt  main.c  routine_library_f32.h  routine_library_f32_impl.h  routine_library_u32.h  routine_library_u32_impl.h
examples/stack_ptx/03_meta_instructions/: CMakeLists.txt  main.c
examples/stack_ptx/04_special_registers/: CMakeLists.txt  main.c
examples/stack_ptx/05_predicates/: CMakeLists.txt  main.c
examples/stack_ptx/06_mma/: CMakeLists.txt  main.c
examples/stack_ptx/07_store_load/: CMakeLists.txt  main.c
examples/stack_ptx/08_cpp/: CMakeLists.txt  main.cpp
examples/stack_ptx/09_routine_libraries_cpp/: CMakeLists.txt  main.cpp  routine_library_f32.hpp  routine_library_f32_impl.hpp  routine_library_u32.hpp  routine_library_u32_impl.hpp
examples/stack_ptx_inject/: CMakeLists.txt  README.md
examples/stack_ptx_inject/00_simple/: CMakeLists.txt  main.c
examples/stack_ptx_inject/01_gemm/: CMakeLists.txt  kernel.cu  main.c
examples/stack_ptx_inject/02_bulk_rand_gemm/: CMakeLists.txt  kernel.cu  main.c
examples/stack_ptx_inject/02_mma_sync/: CMakeLists.txt  kernel.cu  main.c
examples/stack_ptx_inject/03_half_type/: CMakeLists.txt  kernel.cu  main.c
examples/stack_ptx_inject/03_mma_sync/: CMakeLists.txt  kernel.cu  main.c
examples/stack_ptx_inject/04_half_type/: CMakeLists.txt  kernel.cu  main.c
examples/stack_ptx_inject/04_philox/: CMakeLists.txt  kernel.cu  main.c  philox.cuh
examples/stack_ptx_inject/05_bulk_simple_packed/: CMakeLists.txt  cuda_kernel_replicator.py  kernel.cu  main.c
examples/stack_ptx_inject/05_philox_cpp/: CMakeLists.txt  main.cpp
examples/stack_ptx_inject/06_bulk_rand_gemm_packed/: CMakeLists.txt  kernel.cu  main.c
examples/stack_ptx_inject_serialize/: CMakeLists.txt
examples/stack_ptx_inject_serialize/00_simple/: CMakeLists.txt  main.c
examples/stack_ptx_inject_serialize/01_buffer_compile/: CMakeLists.txt  main.c
examples/stack_ptx_inject_serialize/02_buffer_compile_struct/: CMakeLists.txt  kernel.cu  main.c
examples/type_descriptions/: stack_ptx_descriptions.json
generated_headers/: ptx_inject_default_generated_types.h  stack_ptx_default_generated_types.h  stack_ptx_default_generated_types.hpp
helpers/: check_result_helper.h  cuda_helper.h  helpers.h  mma_helper.h  nvptx_helper.h  nvrtc_helper.h  omp_helper.h  ptx_inject_helper.h  stack_ptx_default_info.h  stack_ptx_inject_serialize.h
routine_libraries/: routine_library_philox.h  routine_library_philox.hpp  routine_library_philox_impl.h
tests/: CMakeLists.txt  ptx_inject_00_simple_kernel.cu  ptx_inject_gemm_kernel.cu  stack_ptx_philox_kernel.cu  test_ast_ptx_cpp.cpp  test_ast_ptx_expected_output.c  test_ast_ptx_inject_00_simple.c  test_ptx_inject_00_simple.c  test_ptx_inject_01_gemm.c  test_ptx_inject_inconsistent_duplicate_args.c  test_stack_ptx_inject_00_simple.c  test_stack_ptx_inject_01_gemm.c  test_stack_ptx_inject_philox.c  test_stack_ptx_meta_dup_empty_stack.c  test_stack_ptx_meta_reverse_empty_stack.c  test_stack_ptx_zero_frame_depth_empty_string.c
tests/ptx_inject_full/: CMakeLists.txt  main.c
tests/stack_ptx/: CMakeLists.txt  main.c
tests/stack_ptx_inject_full/: CMakeLists.txt  main.c
tools/: CMakeLists.txt  README.md  ast_ptx_instructions.h  ast_ptx_interpreter.h  c_inline.py  ptx_inject_generate_infos.py  stack_ptx_generate_infos.py  stack_ptx_inject_serialize.h
tools/ptxinject/: CMakeLists.txt  main.c  ptx_inject_types_plugin.h
type_descriptions/: ptx_inject_default_types.json  stack_ptx_descriptions.json  stack_ptx_simple.json
